don't bother limiting the number of events shown.

the data is already there in memory, it's at most one month of data and starts from the date the user selected, and apparently users expect to see it all .. which makes sense.
while i was in there, made some minor improvements to the code (style, efficiency..)

BUG:277472